Added cover pages and som style changes

--- a/index.html
+++ b/index.html
@@ -42,11 +42,13 @@
         </div>
         <div class="featured">
           <div class="image-container">
-             <img src="images/magazine.jpg" alt="">
+             <img src="img/music/CoverMusic.png" alt="">
           </div>
           <div class="featured-text">
-            <h3>Issue No 3 &rarr;</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, necessitatibus aliquid. Delectus culpa incidunt magni architecto quod. Similique dolore adipisci alias, quo neque odit illum aliquid, autem magni incidunt amet non natus labore velit ratione tempore molestias! Nesciunt, sunt. Dicta natus rerum quis rem maxime culpa! Quibusdam aperiam repudiandae ipsum.</p>
+            <h3><a href="music.html">Issue No 1 &rarr;</a></h3>
+            <p>
+              The very first Timeline magazine issue is finally here! This issues takes on the latest within the hottest genres in music and gives the up close stories of in the moment bands and artists.
+            </p>
           </div>
         </div>
         <div class="about">
