--- a/issues.html
+++ b/issues.html
@@ -41,29 +41,32 @@
           <div class="issues-text-container">
               <div>
               <h1 class="issues-headline">ISSUES</h1>
-              <p class="issues-nav-text"><a href="#">Issue No1</a></p>
-              <p class="issues-nav-text"><a href="#">Issue No2</a></p>
-              <p class="issues-nav-text"><a href="#">Issue No3</a></p>
+              <p class="issues-nav-text"><a href="#music">Issue No1 - Music</a></p>
+              <p class="issues-nav-text"><a href="#art">Issue No2 - Art</a></p>
+              
             </div>
             </div>
           <div class="issues-gallery">
               
               <div class="issues-item">
-                <div class="issue-image-container">
-                    <img src="images/img02.jpg" alt="#">
+                <div id="music" class="issue-image-container">
+                    <img src="img/music/CoverMusic.png" alt="#">
                 </div>
                 <div class="issue-text-container">
-                    <h3><a href="music.html">Issue No 2 — Music &rarr;</a></h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum, quisquam ipsam eligendi quia porro voluptate animi rem iure voluptates optio quidem veritatis. Impedit eius laborum qui, nostrum culpa rerum debitis quaerat ex cupiditate deleniti officia, soluta repudiandae corrupti adipisci? Consequatur dicta laboriosam voluptatum deleniti aspernatur laborum quasi perspiciatis asperiores provident!</p>
+                    <h3><a href="music.html">Issue No 1 — Music &rarr;</a></h3>
+                    <p>
+                      The very first Timeline magazine issue is finally here! This issues takes on the latest within the hottest genres in music and gives the up close stories of in the moment bands and artists.
+sic
+                    </p>
                 </div>
               </div>
               <div class="issues-item">
-                <div class="issue-image-container">
-                    <img src="images/img03.jpg" alt="#">
+                <div id="art" class="issue-image-container">
+                    <img src="img/CoverArt.png" alt="#">
                 </div>
                 <div class="issue-text-container">
-                    <h3><a href="art.html">Issue No 3 — Art &rarr;</a></h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum, quisquam ipsam eligendi quia porro voluptate animi rem iure voluptates optio quidem veritatis. Impedit eius laborum qui, nostrum culpa rerum debitis quaerat ex cupiditate deleniti officia, soluta repudiandae corrupti adipisci? Consequatur dicta laboriosam voluptatum deleniti aspernatur laborum quasi perspiciatis asperiores provident!</p>
+                    <h3><a href="art.html">Issue No 2 — Art &rarr;</a></h3>
+                    <p>The second issue in the timeline magazine series takes on the world of art and goes into the hottest topics discussed in art, painting and politics</p>
                 </div>
               </div>
           </div>
