small fixes, add links

--- a/disclaimer.html
+++ b/disclaimer.html
@@ -68,7 +68,7 @@
           <img style="width: 250px;" src="images/Logo.svg" />
          
             <p class="adress">
-                    Informaation modelling and web technologies<br/><br/>University of Bologna
+                    Information modelling and web technologies<br/><br/>University of Bologna
             </p>
             
             <p class="contact-info">
