--- a/documentation.html
+++ b/documentation.html
@@ -54,7 +54,9 @@
               <h2 id="1500s">1500 to 1800</h2>
               <h3>Layout</h3>
               <p>
-                Before the 15th century, creating books was a meticulous and time-consuming process that had to be done by hand. But in 1450, the printing press was invented and the process was automated. The layout in the classical period was typically to order the text in one justified column per page. The text was placed to create harmony on the spread; larger margins on the bottom than on the top, and larger outer margins than inner. The designers paid attention to the relative relationships between the page elements and based the relationships on geometry and aesthetic rules. One especially important principle is the golden ratio, which is a method that artists can use to create an aesthetically pleasing division of space, as well as establish a hierarchy between elements. The proportions between the elements of our design were therefore based on the golden number, φ, which is approximately equal to 1.6.
+                Before the 15th century, creating books was a meticulous and time-consuming process that had to be done by hand. But in 1450, the printing press was invented and the process was automated. The layout in the classical period was typically to order the text in one justified column per page. 
+                The text was placed to create harmony on the spread; larger margins on the bottom than on the top, and larger outer margins than inner. The designers paid attention to the relative relationships between the page elements and based the relationships on geometry and aesthetic rules. 
+                One especially important principle is the golden ratio, which is a method that artists can use to create an aesthetically pleasing division of space, as well as establish a hierarchy between elements. The proportions between the elements of our design were therefore based on the golden number, φ, which is approximately equal to 1.6.
               </p>
 
               <h3>Typography</h3>
@@ -63,10 +65,17 @@
               </p>
 
               <h3>Colors</h3>
-              <p>
-                #e3d7c5 - beige paper color
-                #979890 - grey type color
-              </p>
+              <div class="color-container">
+                <div>
+                  <p >Beige</p>
+                  <div class="color-box" style="background-color:#e3d7c5;" ></div>
+                </div>
+                <div>
+                  <p >Grey</p>
+                  <div class="color-box" style="background-color:#979890;" ></div>
+                </div>
+              </div>
+  
 
               <h3>Images</h3>
               <div class="image-display">
@@ -176,16 +185,42 @@
               <p>
                 The color palette used is young and vibrant. The covers of the magazines consisted of a cut-out image of a celebrity, where the background has been filled in with a bright color. 
               </p>
-              <p>
-                Blue: #006fb4
-                Pink: #f495cc
-                Light Pink: #f7c4c5
-                Yellow: #f2fd40
-                Red: #e43536
-                White: #f7f7fc
-                Purple: #c17ac6
-                Black: #000000
-              </p>
+
+              <div class="color-container">
+                <div>
+                  <p >Blue</p>
+                  <div class="color-box" style="background-color:#006fb4;" ></div>
+                </div>
+                <div>
+                  <p >Pink</p>
+                  <div class="color-box" style="background-color:#f495cc;" ></div>
+                </div>
+                <div>
+                  <p >Light Pink</p>
+                  <div class="color-box" style="background-color:#f7c4c5;" ></div>
+                </div>
+                <div>
+                  <p >Yellow</p>
+                  <div class="color-box" style="background-color:#f2fd40;" ></div>
+                </div>
+                <div>
+                  <p >Red</p>
+                  <div class="color-box" style="background-color:#e43536;" ></div>
+                </div>
+                <div>
+                  <p >White</p>
+                  <div class="color-box" style="background-color:#f7f7fc;" ></div>
+                </div>
+                <div>
+                  <p >Purple</p>
+                  <div class="color-box" style="background-color:#c17ac6;" ></div>
+                </div>
+                <div>
+                  <p >Black</p>
+                  <div class="color-box" style="background-color:#000000;" ></div>
+                </div>
+              </div>
+
 
               <h3>Images</h3>
               <div class="image-display">
