--- a/art.html
+++ b/art.html
@@ -7,10 +7,10 @@
     <title>Timeline Mag</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/x-icon" href="/images/Logo.svg" />
-    <link id="articlestyle" rel="stylesheet" href="./styles/1500.css" />
+    <link id="articlestyle" rel="stylesheet" href="./styles/2030.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery.scrollto@2.1.3/jquery.scrollTo.min.js"></script>
   </head>
@@ -23,10 +23,13 @@
           <p class="style">Style:</p>
           <button
             id="button-1500"
-            class="style-button active-style"
+            class="style-button"
             onclick="changeStyle('1500')"
           >
             1500
+          </button>
+          <button id="button-1900" class="style-button" onclick="changeStyle('1900')">
+            1900
           </button>
           <button
             id="button-2000"
@@ -35,10 +38,7 @@
           >
             2000
           </button>
-          <button id="button-1900" class="style-button" onclick="changeStyle('early_1900')">
-            Early 20th
-          </button>
-          <button id="button-2030" class="style-button" onclick="changeStyle('2030')">
+          <button id="button-2030" class="style-button active-style" onclick="changeStyle('2030')">
             2030
           </button>
         </div>
