--- a/about.html
+++ b/about.html
@@ -47,12 +47,12 @@
               the user a supply of metadata in the articles.
             </p>
             <p>
-              The different styles of TIMELINE MAGAZINE is old history (1500s - 1800s), which captures the textures and feels of old print along with black and white images. 
-              Another important period of deisgn is the early 20th century, esoecially the Bauhaus movement. Filled with new modern uses of typefaces and grpahical elements it drew inspiration from arts and craft movements and mixed it with modernism to create the style we all know so well.
-              The last two grpahical styles takes us back to the good old 2000s,  where popculture peaked with large imagery, bright colors and fun layouts, and 2030, where we explore what design within print and web will look like and how todays trends will evolve in the future. 
+              The different styles of TIMELINE MAGAZINE is old history (1500s), which captures the textures and feels of old print along with black and white images. 
+              Another important period of deisgn is the early 20th century, esoecially the Bauhaus movement. Filled with new modern uses of typefaces and graphical elements it drew inspiration from arts and craft movements and mixed it with modernism to create the style we all know so well.
+              The last two graphical styles takes us back to the good old 2000s, where popculture peaked with large imagery, bright colors and fun layouts, and 2030, where we explore what design within print and web will look like and how todays trends will evolve in the future. 
             <p>
               The user is can click into the different issues and read the different articles in the inline magazine reader.
-              The user can from there chose which graphical style the magazine should be displayed in. On the right side of this reader, 
+              The user can from there choose which graphical style the magazine should be displayed in. On the right side of this reader, 
               the user is given a editorial board that displays different metdata about the article. The user can from here choose to click
               on the different data to either search the article of these data or search wikipedia where possible. 
             </p>
@@ -61,7 +61,7 @@
               in the world of art. Issue no 2 is focused on music and contains different stories from 3 artists, both established and up and coming. 
             </p>
             <p>
-              The magazine web site is designed and created by WIlliam Østensen and Mathilde Tillman.
+              The magazine web site is designed and created by William Østensen and Mathilde Tillman.
             </p>
             
         </div>
