--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Timeline Mag</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="/images/Logo.svg">
+    <link rel="icon" type="image/x-icon" href="images/Logo.svg">
   </head>
   <body>
     <div class="wrapper">
