--- a/art.html
+++ b/art.html
@@ -6,7 +6,7 @@
     <meta name="issue" content="art" />
     <title>Timeline Mag</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" type="image/x-icon" href="/images/Logo.svg" />
+    <link rel="icon" type="image/x-icon" href="images/Logo.svg" />
     <link id="articlestyle" rel="stylesheet" href="./styles/2030.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
