--- a/documentation.html
+++ b/documentation.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="css/issues.css">
     <link rel="stylesheet" href="css/documentation.css">
-    <link rel="icon" type="image/x-icon" href="/images/Logo.svg">
+    <link rel="icon" type="image/x-icon" href="images/Logo.svg">
   </head>
   <body>
     <div class="wrapper">
