--- a/issues.html
+++ b/issues.html
@@ -6,7 +6,7 @@
     <title>Timeline Mag</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="css/issues.css">
-    <link rel="icon" type="image/x-icon" href="/images/Logo.svg">
+    <link rel="icon" type="image/x-icon" href="images/Logo.svg">
   </head>
   <body>
     <div class="wrapper">
